<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:background="@color/colorAppBG"
    android:orientation="vertical"
    tools:context=".fragments.ContactListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilECName"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edECName"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@string/add_contact_email_hint" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilECEmail"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edECEmail"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@string/add_contact_address_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilECAddress"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edECAddress"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_address_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@string/add_contact_number_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilECMobile"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edECNumber"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_number_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/DataAppButton"
                    android:layout_width="0dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="0.5"
                    android:text="@string/edit_contact_btn_cancel_text" />


                <Button
                    android:id="@+id/btnUpdate"
                    style="@style/DataAppButton"
                    android:layout_width="0dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="0.5"
                    android:text="@string/edit_contact_btn_update_text" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>