<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBG"
    android:orientation="vertical"
    tools:context=".fragments.ContactListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategoryList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvCatLEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/category_list_empty_msg"
            android:textSize="@dimen/_15sdp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilACatName"
            style="@style/DataAppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edACatName"
                style="@style/DataAppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_category_cat_name_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnACatAdd"
            style="@style/DataAppButton"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/add_category_btn_add" />


    </LinearLayout>

</LinearLayout>