<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:background="@color/colorAppBG"
    android:orientation="vertical"
    tools:context=".fragments.ContactListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilACName"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edACName"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@string/add_contact_email_hint" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilACEmail"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edACEmail"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@string/add_contact_address_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilACAddress"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edACAddress"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_address_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@string/add_contact_number_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilACMobile"
                style="@style/DataAppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edACNumber"
                    style="@style/DataAppEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_contact_number_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnACAdd"
                style="@style/DataAppButton"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_15sdp"
                android:text="@string/add_contact_btn_add" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>